# botloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  full-gen-types.sh
.circleci/: config.yml
bot-core/schema/: discord.sql
botloader-vscode/: CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json  prebuild.mjs
botloader-vscode/src/: apiclient.ts  extension.ts  guildspace.ts  models.ts  util.ts  workspacemanager.ts  ws.ts
cmd/bot/: Cargo.toml  Dockerfile
cmd/bot/src/: commands.rs  main.rs  vm_manager.rs
cmd/jack-bot/: Cargo.toml
cmd/jack-bot/src/: main.rs
cmd/rs2ts-cli/: Cargo.toml  gen_botloader_types.sh  gen_jack_types.sh
cmd/rs2ts-cli/src/: main.rs
cmd/webapi/: Cargo.toml  Dockerfile
cmd/webapi/src/: config.rs  errors.rs  main.rs  stores.rs
cmd/webapi/src/middlewares/: cors.rs  guild.rs  mod.rs  mw_session.rs
cmd/webapi/src/routes/: auth.rs  errortest.rs  mod.rs  scripts.rs  sessions.rs  vm.rs  ws.rs
components/botrpc/: Cargo.toml
components/botrpc/proto/: botrpc.proto
components/botrpc/src/: client.rs  lib.rs  proto.rs  server.rs
components/common/: Cargo.toml
components/common/src/: config.rs  lib.rs  shutdown.rs
components/configstore/: Cargo.toml
components/configstore/src/: lib.rs  postgres.rs  schema.sql
components/db/: Cargo.toml
components/db/schema/: values.sql
components/db/src/: db.rs  kv.rs  lib.rs  traits.rs
components/discordoauthwrapper/: Cargo.toml
components/discordoauthwrapper/src/: lib.rs
components/guild-logger/: Cargo.toml
components/guild-logger/src/: discord_backend.rs  entry.rs  guild_subscriber_backend.rs  lib.rs
components/isolatecell/: Cargo.toml
components/isolatecell/src/: lib.rs
components/jack-runtime/: Cargo.toml  build.rs
components/jack-runtime/src/: error_reporter.rs  lib.rs  runtime.rs
components/jack-sandbox/: Cargo.toml
components/rs2ts/: Cargo.toml  README.md
components/rs2ts/src/: lib.rs  rs2ts.rs
components/runtime/: Cargo.toml  build.rs
components/runtime-models/: Cargo.toml  gen-index.bash  gen-move-types.bash
components/runtime-models/src/: channel.rs  embed.rs  guild.rs  lib.rs  member.rs  message.rs  role.rs  script.rs  user.rs  util.rs
components/runtime/docgen/: package-lock.json  package.json
components/runtime/docgen/src/: README.md  index.js
components/runtime/src/: contrib_manager.rs  dispatchevents.rs  error_reporter.rs  jsmodules.rs  lib.rs  runtime.rs  sendmessage.rs  validator.rs
components/runtime/src/commonmodels/: command_interaction.rs  createmessage.rs  embed.rs  guild.rs  message.rs  messageupdate.rs  mod.rs  ops_messages.rs  role.rs  script.rs  user.rs
components/runtime/src/extensions/: console.rs  discord.rs  mod.rs  storage.rs
components/runtime/src/jsextensions/: jsmodules.rs  mod.rs  sendmessage.rs
components/runtime/src/ops/: discord.rs  log.rs  mod.rs
components/runtime/src/ts/: bot.ts  command.ts  commands.ts  commonmodels.ts  core_util.ts  events.ts  index.ts  lib.botloader_core.d.ts  lib.deno_core.d.ts  op_wrappers.ts  script.ts  script_globals.d.ts  storage.ts  timers.ts  tsconfig.json  typedecls.sh
components/runtime/src/ts/models/: Attachment.ts  Embed.ts  EmbedAuthor.ts  EmbedFooter.ts  EmbedImage.ts  EmbedProvider.ts  EmbedThumbnail.ts  EmbedVideo.ts  Guild.ts  GuildChannel.ts  Member.ts  Mention.ts  Message.ts  MessageReaction.ts  MessageType.ts  NSFWLevel.ts  NewsThread.ts  PartialMember.ts  PrivateThread.ts  PublicThread.ts  ScriptMeta.ts  Sticker.ts  User.ts  VoiceChannel.ts  index.ts
components/runtime/src/ts/models/discord/: Embed.ts  EmbedField.ts  Guild.ts  GuildChannel.ts  InteractionMember.ts  Message.ts  PrivateThread.ts  PublicThread.ts  Sticker.ts  index.ts
components/runtime/src/ts/models/events/: CommandInteraction.ts  IntervalTimerEvent.ts  MessageUpdate.ts  index.ts
components/runtime/src/ts/models/ops/: CreateMessageFields.ts  EditMessageFields.ts  ScriptMeta.ts  index.ts
components/sandbox/: Cargo.toml
components/sandbox/src/: lib.rs  sandbox.rs  util.rs
components/scriptscheduler/: Cargo.toml
components/scriptscheduler/src/: inmemstorage.rs  lib.rs
components/staterpc/: Cargo.toml
components/staterpc/src/: service.rs
components/stores/: Cargo.toml  sqlx-data.json
components/stores/src/: bucketstore.rs  (+4 more)
components/timers/: Cargo.toml
components/timers/src/: lib.rs
components/tscompiler/: Cargo.toml
components/tscompiler/src/: compiler.rs  jack.ts  main.rs
components/validation/: Cargo.toml
components/vm/: Cargo.toml  build.rs
components/vm-manager/: Cargo.toml  README.md
components/vm-manager/src/: lib.rs
components/vm/src/: core.js  error.rs  error_reporter.rs  lib.rs  moduleloader.rs  validator.rs  vm.rs
components/vmthread/: Cargo.toml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: ApiClient.tsx  App.css  App.tsx  BuildConfig.tsx
scripts/: error_on_message.ts  pog.ts  runaway.ts  runaway_validate.ts  tsconfig.json
typings/: bot.d.ts  command.d.ts  commands.d.ts  commonmodels.d.ts  core_util.d.ts  events.d.ts  index.d.ts  lib.botloader_user.core.d.ts  lib.deno_core.d.ts  op_wrappers.d.ts  script.d.ts  script_globals.d.ts  storage.d.ts  timers.d.ts
typings/models/: Attachment.d.ts  AutoArchiveDuration.d.ts  CategoryChannel.d.ts  ChannelMention.d.ts  ChannelType.d.ts  Command.d.ts  CommandGroup.d.ts  CommandOption.d.ts  CommandOptionType.d.ts  CommandSubGroup.d.ts  DefaultMessageNotificationLevel.d.ts  Embed.d.ts  EmbedAuthor.d.ts  EmbedField.d.ts  EmbedFooter.d.ts  EmbedImage.d.ts  EmbedProvider.d.ts  EmbedThumbnail.d.ts  EmbedVideo.d.ts  ExplicitContentFilter.d.ts  Guild.d.ts  GuildChannel.d.ts  IntervalTimer.d.ts  IntervalType.d.ts  Member.d.ts  Mention.d.ts  Message.d.ts  MessageActivity.d.ts  MessageActivityType.d.ts  MessageApplication.d.ts  MessageReaction.d.ts  MessageReference.d.ts  MessageType.d.ts  MfaLevel.d.ts  NSFWLevel.d.ts  NewsThread.d.ts  NsfwLevel.d.ts  PartialMember.d.ts  PermissionOverwrite.d.ts  PermissionOverwriteType.d.ts  (+19 more)
(+78 files in other folders)
