[workspace]
members = [
    "components/vmthread",
    "components/vm",
    "components/isolatecell",
    "components/stores",
    "components/discordoauthwrapper",
    "components/botrpc",
    "components/vm-manager",
    "components/guild-logger",
    "cmd/rs2ts-cli",
    "cmd/bot",
    "cmd/webapi",
]