[workspace]
members = [
    "components/vmthread",
    "components/vm",
    "components/isolatecell",
    "components/stores",
    "components/discordoauthwrapper",
    "components/botrpc",
    "components/vm-manager",
    "components/guild-logger",
    "components/runtime-models",
    "cmd/bot",
    "cmd/webapi",
]