[package]
name = "bot"
version = "0.1.0"
edition = "2018"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configstore = {path="../../components/configstore"}
jack-runtime = {path="../../components/jack-runtime"}
jack-sandbox = {path="../../components/jack-sandbox"}
tscompiler = {path="../../components/tscompiler"}

twilight-cache-inmemory = "0.6"
twilight-gateway = "0.6"
twilight-http = "0.6"
twilight-model = "0.6"
twilight-util = {version = "0.6", features=["permission-calculator"]}
 
tracing = "0.1"
tracing-futures= "0.2"
tracing-subscriber = "0.2"
tracing-log = "0.1"

tokio = { version = "1.5.0", features = ["full"] }
futures-core = "0.3"
futures = "0.3"

redis = { version= "0.20.1", features = ["tokio-comp"]} 
dashmap = "4.0"
dotenv = "0.15"
rusty_v8 = "0.22"


[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]