[package]
name = "webapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
tokio = { version = "1.5.0", features = ["full"] }
oauth2 = "4.1"
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
async-trait = "0.1"
dashmap = "4.0"
rand = "0.8"
base64 = "0.13"

twilight-http = "0.6"
twilight-model = "0.6"
