[package]
name = "webapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
stores = {path="../../components/stores"}
discordoauthwrapper = {path="../../components/discordoauthwrapper"}
tscompiler = {path="../../components/tscompiler"}

oauth2 = "4.1"
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
async-trait = "0.1"
dashmap = "4.0"
rand = "0.8"
base64 = "0.13"
dotenv = "0.15"
futures="0.3"

tokio = { version = "1.5.0", features = ["full"] }
tower-http = { version = "0.1", features = ["trace"] }
tower = "0.4"
axum = "0.2"
axum-debug = "0.1"
http-body = "0.4"

tracing = "0.1"
tracing-futures= "0.2"
tracing-subscriber = "0.2"
tracing-log = "0.1"

twilight-http = "0.6"
twilight-model = "0.6"
