[package]
name = "configstore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.6"
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
redis = { version= "0.20.1", features = ["tokio-comp", "connection-manager"]}
sqlx = {version = "0.5", features = ["runtime-async-std-rustls", "postgres", "chrono", "macros"]}