[package]
name = "db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
twilight-model = "0.6"
async-trait = "0.1"
dotenv = "0.15"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
sqlx = {version = "0.5", features = ["runtime-async-std-rustls", "postgres", "chrono", "macros"]}
