[package]
name = "discordoauthwrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"}

async-trait = "0.1"
oauth2 = "4.1"

twilight-model = "0.6"
twilight-http = "0.6"
