[package]
name = "sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.91"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"
tracing = "0.1"
anyhow = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
