[package]
name = "timers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"}
vm = {path="../../components/vm"}
runtime-models = {path="../../components/runtime-models"}

chrono = {version = "0.4", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twilight-model = "0.7"
cron = "0.9"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
