[package]
name = "tscompiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configstore = {path="../../components/configstore"}
# swc = "0.24"
swc_common = "0.10"
# swc_ecma_parser = "0.60"
anyhow = "1.0"
swc_ecmascript = {version = "0.45.0", features=["codegen", "parser", "transforms", "typescript", "visit", "compat"]}