[package]
name = "tscompiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# swc = "0.24"
swc_common = "0.14"
# swc_ecma_parser = "0.60"
swc_ecmascript = {version = "0.84.0", features=["codegen", "parser", "transforms", "typescript", "visit", "compat"]}