[package]
name = "vm-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"}
runtime = {path="../../components/runtime"}
vmthread = {path="../../components/vmthread"}
vm = {path="../../components/vm"}
tscompiler = {path="../../components/tscompiler"}
guild-logger = {path="../../components/guild-logger"}

tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

twilight-gateway = "0.7"
twilight-model = "0.7"
twilight-http = {version = "0.7", features = ["tracing"]}
twilight-cache-inmemory = "0.7"
