[package]
name = "vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmthread = {path="../../components/vmthread"}
isolatecell = {path="../../components/isolatecell"}
stores = {path="../../components/stores"}
guild-logger = {path="../../components/guild-logger"}

twilight-model = "0.8"

tracing = "0.1"

deno_core = "0.109"
v8 = "0.35"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
url = "2.2"
serde_json = "1.0"
async-trait = "0.1"

[build-dependencies]
deno_core = "0.109"
